proyectofinal2025/src/main/java/proyectofinal2025/tpfinal2025Parser.java
// Generated from c:/Users/Santiago/Desktop/Personal/Finales 2025/TC 2025/proyectofinal2025/src/main/java/proyectofinal2025/tpfinal2025.g4 by ANTLR 4.13.1
 
package proyectofinal2025;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class tpfinal2025Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LLAVE_APER=1, LLAVE_CIER=2, PAR_APER=3, PAR_CIER=4, MAS=5, MENOS=6, MULTI=7, 
		DIVIS=8, MENOR=9, MAYOR=10, MENOR_IGUAL=11, MAYOR_IGUAL=12, IGUALDAD=13, 
		DIFERENTE=14, AND=15, OR=16, COMA=17, PUNTO_COMA=18, ASIGNACION=19, INT=20, 
		FLOAT=21, DOUBLE=22, VOID=23, CTRL_IF=24, CTRL_WHILE=25, CTRL_FOR=26, 
		CTRL_RETURN=27, NRO_ENTERO=28, NRO_DECIMAL=29, ID=30, WS=31;
	public static final int
		RULE_programa = 0, RULE_instrucciones = 1, RULE_instruccion = 2, RULE_asignacion = 3, 
		RULE_bloque = 4, RULE_declaracion = 5, RULE_declaracion_multiple = 6, 
		RULE_declarar_funcion = 7, RULE_definir_funcion = 8, RULE_estructura_if = 9, 
		RULE_estructura_while = 10, RULE_estructura_for = 11, RULE_llamar_funcion = 12, 
		RULE_retorno = 13, RULE_tipo_de_dato = 14, RULE_operacion_al = 15, RULE_expresion = 16, 
		RULE_e = 17, RULE_termino = 18, RULE_t = 19, RULE_factor = 20, RULE_tipo_de_funcion = 21, 
		RULE_parametros_de_funcion = 22, RULE_parametro = 23, RULE_comparacion = 24, 
		RULE_operador_comparacion = 25, RULE_operador_logico = 26, RULE_struct_for = 27, 
		RULE_incrementar_decrementar = 28, RULE_incrementar = 29, RULE_decrementar = 30, 
		RULE_argumentos_de_funcion = 31, RULE_argumento = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "instrucciones", "instruccion", "asignacion", "bloque", "declaracion", 
			"declaracion_multiple", "declarar_funcion", "definir_funcion", "estructura_if", 
			"estructura_while", "estructura_for", "llamar_funcion", "retorno", "tipo_de_dato", 
			"operacion_al", "expresion", "e", "termino", "t", "factor", "tipo_de_funcion", 
			"parametros_de_funcion", "parametro", "comparacion", "operador_comparacion", 
			"operador_logico", "struct_for", "incrementar_decrementar", "incrementar", 
			"decrementar", "argumentos_de_funcion", "argumento"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'{'", "'}'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'<'", 
			"'>'", "'<='", "'>='", "'=='", "'!='", "'&&'", "'||'", "','", "';'", 
			"'='", "'int'", "'float'", "'double'", "'void'", "'if'", "'while'", "'for'", 
			"'return'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LLAVE_APER", "LLAVE_CIER", "PAR_APER", "PAR_CIER", "MAS", "MENOS", 
			"MULTI", "DIVIS", "MENOR", "MAYOR", "MENOR_IGUAL", "MAYOR_IGUAL", "IGUALDAD", 
			"DIFERENTE", "AND", "OR", "COMA", "PUNTO_COMA", "ASIGNACION", "INT", 
			"FLOAT", "DOUBLE", "VOID", "CTRL_IF", "CTRL_WHILE", "CTRL_FOR", "CTRL_RETURN", 
			"NRO_ENTERO", "NRO_DECIMAL", "ID", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "tpfinal2025.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public tpfinal2025Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode EOF() { return getToken(tpfinal2025Parser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			instrucciones();
			setState(67);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionesContext extends ParserRuleContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public InstruccionesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instrucciones; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterInstrucciones(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitInstrucciones(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitInstrucciones(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionesContext instrucciones() throws RecognitionException {
		InstruccionesContext _localctx = new InstruccionesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_instrucciones);
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LLAVE_APER:
			case INT:
			case FLOAT:
			case DOUBLE:
			case VOID:
			case CTRL_IF:
			case CTRL_WHILE:
			case CTRL_FOR:
			case CTRL_RETURN:
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				instruccion();
				setState(70);
				instrucciones();
				}
				break;
			case EOF:
			case LLAVE_CIER:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public TerminalNode PUNTO_COMA() { return getToken(tpfinal2025Parser.PUNTO_COMA, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public DeclaracionContext declaracion() {
			return getRuleContext(DeclaracionContext.class,0);
		}
		public Declarar_funcionContext declarar_funcion() {
			return getRuleContext(Declarar_funcionContext.class,0);
		}
		public Definir_funcionContext definir_funcion() {
			return getRuleContext(Definir_funcionContext.class,0);
		}
		public Estructura_ifContext estructura_if() {
			return getRuleContext(Estructura_ifContext.class,0);
		}
		public Estructura_whileContext estructura_while() {
			return getRuleContext(Estructura_whileContext.class,0);
		}
		public Estructura_forContext estructura_for() {
			return getRuleContext(Estructura_forContext.class,0);
		}
		public Llamar_funcionContext llamar_funcion() {
			return getRuleContext(Llamar_funcionContext.class,0);
		}
		public RetornoContext retorno() {
			return getRuleContext(RetornoContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitInstruccion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitInstruccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		try {
			setState(95);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				asignacion();
				setState(76);
				match(PUNTO_COMA);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(78);
				bloque();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				declaracion();
				setState(80);
				match(PUNTO_COMA);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(82);
				declarar_funcion();
				setState(83);
				match(PUNTO_COMA);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(85);
				definir_funcion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(86);
				estructura_if();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(87);
				estructura_while();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(88);
				estructura_for();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(89);
				llamar_funcion();
				setState(90);
				match(PUNTO_COMA);
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(92);
				retorno();
				setState(93);
				match(PUNTO_COMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AsignacionContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(tpfinal2025Parser.ID, 0); }
		public TerminalNode ASIGNACION() { return getToken(tpfinal2025Parser.ASIGNACION, 0); }
		public Operacion_alContext operacion_al() {
			return getRuleContext(Operacion_alContext.class,0);
		}
		public AsignacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_asignacion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterAsignacion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitAsignacion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitAsignacion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AsignacionContext asignacion() throws RecognitionException {
		AsignacionContext _localctx = new AsignacionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_asignacion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ID);
			setState(98);
			match(ASIGNACION);
			setState(99);
			operacion_al();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BloqueContext extends ParserRuleContext {
		public TerminalNode LLAVE_APER() { return getToken(tpfinal2025Parser.LLAVE_APER, 0); }
		public InstruccionesContext instrucciones() {
			return getRuleContext(InstruccionesContext.class,0);
		}
		public TerminalNode LLAVE_CIER() { return getToken(tpfinal2025Parser.LLAVE_CIER, 0); }
		public BloqueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bloque; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterBloque(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitBloque(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitBloque(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BloqueContext bloque() throws RecognitionException {
		BloqueContext _localctx = new BloqueContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_bloque);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(LLAVE_APER);
			setState(102);
			instrucciones();
			setState(103);
			match(LLAVE_CIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclaracionContext extends ParserRuleContext {
		public Tipo_de_datoContext tipo_de_dato() {
			return getRuleContext(Tipo_de_datoContext.class,0);
		}
		public TerminalNode ID() { return getToken(tpfinal2025Parser.ID, 0); }
		public Declaracion_multipleContext declaracion_multiple() {
			return getRuleContext(Declaracion_multipleContext.class,0);
		}
		public DeclaracionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterDeclaracion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitDeclaracion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitDeclaracion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracionContext declaracion() throws RecognitionException {
		DeclaracionContext _localctx = new DeclaracionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declaracion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(105);
			tipo_de_dato();
			setState(106);
			match(ID);
			setState(107);
			declaracion_multiple();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declaracion_multipleContext extends ParserRuleContext {
		public TerminalNode ASIGNACION() { return getToken(tpfinal2025Parser.ASIGNACION, 0); }
		public Operacion_alContext operacion_al() {
			return getRuleContext(Operacion_alContext.class,0);
		}
		public Declaracion_multipleContext declaracion_multiple() {
			return getRuleContext(Declaracion_multipleContext.class,0);
		}
		public TerminalNode COMA() { return getToken(tpfinal2025Parser.COMA, 0); }
		public TerminalNode ID() { return getToken(tpfinal2025Parser.ID, 0); }
		public Declaracion_multipleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracion_multiple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterDeclaracion_multiple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitDeclaracion_multiple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitDeclaracion_multiple(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracion_multipleContext declaracion_multiple() throws RecognitionException {
		Declaracion_multipleContext _localctx = new Declaracion_multipleContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_declaracion_multiple);
		try {
			setState(117);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ASIGNACION:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(ASIGNACION);
				setState(110);
				operacion_al();
				setState(111);
				declaracion_multiple();
				}
				break;
			case COMA:
				enterOuterAlt(_localctx, 2);
				{
				setState(113);
				match(COMA);
				setState(114);
				match(ID);
				setState(115);
				declaracion_multiple();
				}
				break;
			case PUNTO_COMA:
				enterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Declarar_funcionContext extends ParserRuleContext {
		public Tipo_de_funcionContext tipo_de_funcion() {
			return getRuleContext(Tipo_de_funcionContext.class,0);
		}
		public TerminalNode ID() { return getToken(tpfinal2025Parser.ID, 0); }
		public TerminalNode PAR_APER() { return getToken(tpfinal2025Parser.PAR_APER, 0); }
		public Parametros_de_funcionContext parametros_de_funcion() {
			return getRuleContext(Parametros_de_funcionContext.class,0);
		}
		public TerminalNode PAR_CIER() { return getToken(tpfinal2025Parser.PAR_CIER, 0); }
		public Declarar_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declarar_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterDeclarar_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitDeclarar_funcion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitDeclarar_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declarar_funcionContext declarar_funcion() throws RecognitionException {
		Declarar_funcionContext _localctx = new Declarar_funcionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_declarar_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			tipo_de_funcion();
			setState(120);
			match(ID);
			setState(121);
			match(PAR_APER);
			setState(122);
			parametros_de_funcion();
			setState(123);
			match(PAR_CIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Definir_funcionContext extends ParserRuleContext {
		public Tipo_de_funcionContext tipo_de_funcion() {
			return getRuleContext(Tipo_de_funcionContext.class,0);
		}
		public TerminalNode ID() { return getToken(tpfinal2025Parser.ID, 0); }
		public TerminalNode PAR_APER() { return getToken(tpfinal2025Parser.PAR_APER, 0); }
		public Parametros_de_funcionContext parametros_de_funcion() {
			return getRuleContext(Parametros_de_funcionContext.class,0);
		}
		public TerminalNode PAR_CIER() { return getToken(tpfinal2025Parser.PAR_CIER, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Definir_funcionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definir_funcion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterDefinir_funcion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitDefinir_funcion(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitDefinir_funcion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Definir_funcionContext definir_funcion() throws RecognitionException {
		Definir_funcionContext _localctx = new Definir_funcionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_definir_funcion);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			tipo_de_funcion();
			setState(126);
			match(ID);
			setState(127);
			match(PAR_APER);
			setState(128);
			parametros_de_funcion();
			setState(129);
			match(PAR_CIER);
			setState(130);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Estructura_ifContext extends ParserRuleContext {
		public TerminalNode CTRL_IF() { return getToken(tpfinal2025Parser.CTRL_IF, 0); }
		public TerminalNode PAR_APER() { return getToken(tpfinal2025Parser.PAR_APER, 0); }
		public ComparacionContext comparacion() {
			return getRuleContext(ComparacionContext.class,0);
		}
		public TerminalNode PAR_CIER() { return getToken(tpfinal2025Parser.PAR_CIER, 0); }
		public BloqueContext bloque() {
			return getRuleContext(BloqueContext.class,0);
		}
		public Estructura_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_estructura_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).enterEstructura_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof tpfinal2025Listener ) ((tpfinal2025Listener)listener).exitEstructura_if(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof tpfinal2025Visitor ) return ((tpfinal2025Visitor<? extends T>)visitor).visitEstructura_if(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Estructura_ifContext estructura_if() throws RecognitionException {
		Estructura_ifContext _localctx = new Estructura_ifContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_estructura_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(CTRL_IF);
			setState(133);
			match(PAR_APER);
			setState(134);
			comparacion();
			setState(135);
			match(PAR_CIER);
			setState(136);
			bloque();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
